--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,14 +11,14 @@ layout: default
       <div class="container">
         <div class="intro-text">
           <div class="intro-lead-in">{{ site.data.home.intro.lead-in }}</div>
-          <div class="intro-heading text-uppercase">{{ site.data.home.intro.heading }}</div>
+          <div class="intro-heading">{{ site.data.home.intro.heading }}</div>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">{{ site.data.home.intro.btn }}</a>
         </div>
       </div>
     </header>
 
-    <!-- Services -->
-    <section id="services">
+    <!-- Features -->
+    <section id="features">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -27,7 +27,7 @@ layout: default
           </div>
         </div>
         <div class="row text-center">
-          {%- for service in site.data.home.services.service -%}
+          {%- for service in site.data.home.features.feature -%}
           {% assign ws = '' %}
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -36,38 +36,6 @@ layout: default
             </span>
             <h4 class="service-heading">{{ service.heading }}</h4>
             <p class="text-muted">{{ service.text }}</p>
-          </div>
-          {%- endfor -%}
-        {% assign ws = '' %}
-        </div>
-      </div>
-    </section>
-
-    <!-- Portfolio Grid -->
-    <section class="bg-light" id="portfolio">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">{{ site.data.home.portfolio.heading }}</h2>
-            <h3 class="section-subheading text-muted">{{ site.data.home.portfolio.subheading }}</h3>
-          </div>
-        </div>
-        <div class="row">
-          {%- for project in site.projects -%}
-          {% assign ws = '' %}
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal{{ project.id | replace: '/projects/', '' }}">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fa fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="{{ assets_path }}{{ project.thumbnail }}" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>{{ project.client }}</h4>
-              <p class="text-muted">{{ project.category }}</p>
-            </div>
           </div>
           {%- endfor -%}
         {% assign ws = '' %}
@@ -114,64 +82,6 @@ layout: default
               </li>
             </ul>
           </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Team -->
-    <section class="bg-light" id="team">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">{{ site.data.home.team.heading }}</h2>
-            <h3 class="section-subheading text-muted">{{ site.data.home.team.subheading }}</h3>
-          </div>
-        </div>
-        <div class="row">
-          {%- for member in site.data.home.team.members -%}
-          {% assign ws = '' %}
-          <div class="col-sm-4">
-            <div class="team-member">
-              <img class="mx-auto rounded-circle" src="{{ assets_path }}{{ member.img }}" alt="">
-              <h4>{{ member.name }}</h4>
-              <p class="text-muted">{{ member.role }}</p>
-              <ul class="list-inline social-buttons">
-                {%- for sm in member.social-buttons -%}
-                {% assign ws = '' %}
-                <li class="list-inline-item">
-                  <a href="{{ sm.url }}">
-                    <i class="{{ sm.icon }}"></i>
-                  </a>
-                </li>
-                {%- endfor -%}
-              {% assign ws = '' %}
-              </ul>
-            </div>
-          </div>
-          {%- endfor -%}
-        {% assign ws = '' %}
-        </div>
-        <div class="row">
-          <div class="col-lg-8 mx-auto text-center">
-            <p class="large text-muted">{{ site.data.home.team.text }}</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Clients -->
-    <section class="py-5">
-      <div class="container">
-        <div class="row">
-          {%- for client in site.data.home.clients -%}
-          {% assign ws = '' %}
-          <div class="col-md-3 col-sm-6">
-            <a href="{{ client.url }}">
-              <img class="img-fluid d-block mx-auto" src="{{ assets_path }}{{ client.img }}" alt="">
-            </a>
-          </div>
-          {%-  endfor -%}
-        {% assign ws = '' %}
         </div>
       </div>
     </section>
