--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,8 +22,8 @@ layout: default
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">{{ site.data.home.services.heading }}</h2>
-            <h3 class="section-subheading text-muted">{{ site.data.home.services.subheading }}</h3>
+            <h2 class="section-heading text-uppercase">{{ site.data.home.features.heading }}</h2>
+            <h3 class="section-subheading text-muted">{{ site.data.home.features.subheading }}</h3>
           </div>
         </div>
         <div class="row text-center">
