--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -1,6 +1,6 @@
 // Styling for the navbar
 #mainNav {
-  background-color: $gray-900;
+  background-color: black; // $gray-900;
   .navbar-toggler {
     font-size: 12px;
     right: 0;
