--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,20 +26,22 @@ layout: default
             <h3 class="section-subheading text-muted">{{ site.data.home.features.subheading }}</h3>
           </div>
         </div>
-        <div class="row text-center">
-          {%- for service in site.data.home.features.feature -%}
-          {% assign ws = '' %}
-          <div class="col-md-4">
+        {%- for service in site.data.home.features.feature -%}
+        {% assign ws = '' %}
+        <div class="row"> 
+          <div class="col-md-6">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
               <i class="{{ service.icon }} fa-stack-1x fa-inverse"></i>
             </span>
+          </div>
+          <div class="col-md-6">
             <h4 class="service-heading">{{ service.heading }}</h4>
             <p class="text-muted">{{ service.text }}</p>
           </div>
-          {%- endfor -%}
-        {% assign ws = '' %}
         </div>
+        {%- endfor -%}
+        {% assign ws = '' %}
       </div>
     </section>
 
