--- a/_sass/_services.scss
+++ b/_sass/_services.scss
@@ -4,7 +4,7 @@
   text-transform: none;
 }
 
-@media #{$desktop} {
+@media(min-width:768px) {
 	.myfeature section:nth-child(even) .flex {
 		flex-direction: row-reverse;
 	}
