--- a/_sass/_services.scss
+++ b/_sass/_services.scss
@@ -5,7 +5,7 @@
 }
 
 @media(min-width:768px) {
-	.myfeature section:nth-child(even) .flex {
+	.row section:nth-child(even) {
 		flex-direction: row-reverse;
 	}
 }
