--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,9 +32,9 @@ layout: default
     {%- for service in site.data.home.features.feature -%}
     {% assign ws = '' %}
     <section>
-      <div class="container myfeature">     
-        <div class="row flex"> 
-          <div class="col-md-6">
+      <div class="container">     
+        <div class="row"> 
+          <div class="col-md-6 text-center">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
               <i class="{{ service.icon }} fa-stack-1x fa-inverse"></i>
