--- a/_sass/_services.scss
+++ b/_sass/_services.scss
@@ -5,7 +5,7 @@
 }
 
 @media(min-width:768px) {
-	.myfeature :nth-child(even) {
+	.myfeature .row { //:nth-child(even)
 		flex-direction: row-reverse;
 	}
 }
