--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,7 @@ layout: default
     </section>
 
     <section>
-      <div class="container myfeature">
+      <div class="container alternate">
         {%- for service in site.data.home.features.feature -%}
         {% assign ws = '' %}
         <div class="row"> 
