--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -80,7 +80,7 @@ layout: default
           </div>
         </div>
         <div class="row">
-          <div class="about-image text-center">
+          <div class="col-lg-12 about-image text-center">
             <img src="{{ site.data.home.about.image }}" alt="{{ site.data.home.about.alt-text }}">
           </div>
         </div>
