--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,7 +55,7 @@ layout: default
     <section id="testimonial" class="testimonial">
       <div class="container">
 	<div class="row testimonial-block">
-	  <div class="col-md-4 square-image "><img src="{{ site.data.home.testimonial.image }}" alt="{{ site.data.home.testimonial.alt-text }}"></div>
+	  <div class="col-md-4 square-image text-center"><img src="{{ site.data.home.testimonial.image }}" alt="{{ site.data.home.testimonial.alt-text }}"></div>
 	  <blockquote class="col-md-8">
 	    <p class="">{{ site.data.home.testimonial.text }}</p>
 	    <p class="author">{{ site.data.home.testimonial.credentials }}</p>
