Add import _testimonial.scss

--- a/assets/css/agency.min.scss
+++ b/assets/css/agency.min.scss
@@ -14,8 +14,9 @@
 @import "_navbar.scss";
 @import "_masthead.scss";
 @import "_services.scss";
-@import "_portfolio.scss";
+@import "_testimonial.scss";
+/* @import "_portfolio.scss"; */
 @import "_timeline.scss";
-@import "_team.scss";
+/* @import "_team.scss"; */
 @import "_contact.scss";
 @import "_footer.scss";
