--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -5,14 +5,19 @@ header.masthead {
   background-image: url('../img/mobile-bg.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
-  background-position: center center;
-  background-size: auto 100%;
+  background-position: center top;
+  background-size: cover;
   @include background-cover;
   .intro-text {
-    margin-top: 100px;
-    padding-top: 100px;
+    margin-top: 50px;
+    padding-top: 350px;
     padding-bottom: 100px;
-    padding-left: 0%;
+    .intro-title {
+      font-size: 36px;
+      font-style: italic;
+      @include heading-font;
+      margin-bottom: 25px;
+    }
     .intro-lead-in {
       font-size: 22px;
       font-style: italic;
@@ -38,8 +43,14 @@ header.masthead {
     background-size: auto 100%;
     @include background-cover;
     .intro-text {
-      padding-top: 100px;
+      padding-top: 50px;
       padding-bottom: 70px;
+      .intro-title {
+        font-size: 48px;
+        font-style: italic;
+        @include heading-font;
+        margin-bottom: 48px;
+      }
       .intro-lead-in {
         font-size: 40px;
         font-style: italic;
