--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,6 +10,7 @@ layout: default
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
+	  <div class="intro-title">{{ site.data.home.intro.title }}</div>
           <div class="intro-lead-in">{{ site.data.home.intro.lead-in }}</div>
           <div class="intro-heading">{{ site.data.home.intro.heading }}</div>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#features">{{ site.data.home.intro.btn }}</a>
