--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -45,7 +45,7 @@ header.masthead {
     .intro-text {
       padding-top: 50px;
       padding-bottom: 70px;
-      padding-left: 45%
+      padding-left: 45%;
       .intro-title {
         font-size: 48px;
         font-style: italic;
