Added small button styling

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -62,6 +62,12 @@ section {
   padding: 20px 40px;
 }
 
+.btn-sm {
+  font-size: 16px;
+  padding: 16px 32px;
+}
+
+
 .btn-primary {
   background-color: $primary;
   border-color: $primary;
