--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -55,7 +55,7 @@ header.masthead {
     background-image: url('../img/header-bg.jpg');
     background-repeat: no-repeat;
     background-attachment: scroll;
-    background-position: center center;
+    background-position: 30% top;
     background-size: auto 100%;
     @include background-desktop;
     .intro-text {
