--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -85,3 +85,24 @@ header.masthead {
     }
   }
 }
+@media(min-width:768px) and (max-width: 992px) {
+  header.masthead {
+    .intro-text {
+      padding-top: 200px;
+      padding-bottom: 20px;
+      padding-left: 35%;
+      .intro-title {
+        margin-bottom: 10px;
+      }
+      .intro-lead-in {
+        font-size: 32px;
+        line-height: 34px;
+        margin-bottom: 15px;
+      }
+      .intro-heading {
+        margin-bottom: 25px;
+        @include heading-font;
+      }
+    }
+  }
+}
