--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -39,8 +39,9 @@ header.masthead {
     background-size: auto 90%;
     @include background-mini;
     .intro-text {
-      padding-top: 300px;
-      padding-bottom: 50px;
+      margin-top: 25px;
+      padding-top: 250px;
+      padding-bottom: 100px;
       .intro-title {
         margin-bottom: 16px;
       }
