--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -50,6 +50,11 @@ layout: default
     <!-- Social Proof -->
     <section id="testimonial" class="testimonial">
       <div class="container">
+	<div class="row">
+	  <div class="col-lg-12 text-center">
+		<h2 class="section-heading text-uppercase">{{ site.data.home.testimonial.heading }}</h2>
+	  </div>
+	</div>
 	<div class="row testimonial-block">
 	  <div class="col-md-4 square-image text-center"><img src="{{ site.data.home.testimonial.image }}" alt="{{ site.data.home.testimonial.alt-text }}"></div>
 	  <blockquote class="col-md-8">
