--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -56,7 +56,7 @@ header.masthead {
     background-image: url('../img/header-bg.jpg');
     background-repeat: no-repeat;
     background-attachment: scroll;
-    background-position: 30% top;
+    background-position: center center;
     background-size: auto 100%;
     @include background-desktop;
     .intro-text {
@@ -88,6 +88,7 @@ header.masthead {
 }
 @media(min-width:768px) and (max-width: 992px) {
   header.masthead {
+    background-position: 30% top;
     .intro-text {
       padding-top: 200px;
       padding-bottom: 20px;
