--- a/assets/css/agency.min.scss
+++ b/assets/css/agency.min.scss
@@ -15,8 +15,6 @@
 @import "_masthead.scss";
 @import "_services.scss";
 @import "_testimonial.scss";
-/* @import "_portfolio.scss"; */
-@import "_timeline.scss";
-/* @import "_team.scss"; */
+@import "_about.scss";
 @import "_contact.scss";
 @import "_footer.scss";
