--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -82,7 +82,7 @@ layout: default
         </div>
         <div class="row">
           <div class="col-lg-12 about-image text-center">
-            <img src="{{ site.data.home.about.image }}" alt="{{ site.data.home.about.alt-text }}">
+            <img class="full-width" src="{{ site.data.home.about.image }}" alt="{{ site.data.home.about.alt-text }}">
           </div>
         </div>
       </div>
