--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -13,7 +13,7 @@
   }
   .navbar-brand {
     color: $primary;
-    @include script-font;
+    //@include script-font;
     &.active,
     &:active,
     &:focus,
