--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -13,7 +13,7 @@ p {
 }
 
 a {
-  color: $primary;
+  //KA color: $primary;
   &:hover {
     color: darken($primary, 10%);
   }
@@ -23,15 +23,17 @@ a {
   color: $primary !important;
 }
 
-h1 {
-  font-weight: 400;
-  @include heading-font;
+.text-gradient {
   @include bg-gradient;
-  //background: $gradient;
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   display: inline-block;
+}
+
+h1 {
+  font-weight: 400;
+  @include heading-font;  
   font-size: 64px;
   line-height: 76px;
 }
