--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,57 +10,98 @@ layout: default
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-	  <div class="intro-title">{{ site.data.home.intro.title }}</div>
-          <div class="intro-lead-in">{{ site.data.home.intro.lead-in }}</div>
+	  <div class="intro-lead-in">{{ site.data.home.intro.lead-in }}</div>
+          <div class="intro-title ">
+	    <h1 class="text-gradient">{{ site.data.home.intro.title }}</h1>
+	  </div>
           <div class="intro-heading">{{ site.data.home.intro.heading }}</div>
           <a class="btn btn-primary btn-xl btn-sm text-uppercase js-scroll-trigger" href="#features">{{ site.data.home.intro.btn }}</a>
-        </div>
+        </div>      
       </div>
     </header>
+
+
+    <!-- Description -->
+    <section id="description">
+      <div class="container">
+        <div class="row">
+	  <div class="col-lg-12 text-center">
+	    <h4>{{ site.data.home.intro.description }}</h4>
+	  </div>
+	</div>
+      </div>
+    </section>
+
 
     <!-- Features -->
     <section id="features">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">{{ site.data.home.features.heading }}</h2>
-            <h3 class="section-subheading text-muted">{{ site.data.home.features.subheading }}</h3>
-          </div>
-        </div>
-        {%- for service in site.data.home.features.feature -%}
-        {% assign ws = '' %}
-        <div{% cycle ' class="row"', ' class="row reverse"' %}> 
-          <div class="col-md-6 text-center">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="{{ service.icon }} fa-stack-1x fa-inverse"></i>
-            </span>
-          </div>
-          <div class="col-md-6">
-            <h4 class="service-heading">{{ service.heading }}</h4>
-            <p class="text-muted">{{ service.text }}</p>
-          </div>
-        </div>
-        {%- endfor -%}
-        {% assign ws = '' %}
+		<div class="col-md-6 text-center">
+			<div style="color: black" class="">   
+				<h1 class="text-gradient text-uppercase">{{ site.data.home.features.one.heading }}</h1>
+	  		</div>
+			<div>
+				<h4>{{  site.data.home.features.one.subheading  }}</h4>
+			</div>
+		</div>
+		<div class="col-md-6 text-center">
+			<img src="{{ site.data.home.features.one.image }}" alt="{{ site.data.home.features.one.alt-text }}" />
+		</div>
+		<img class="full-width" src="{{ site.data.home.features.transition.image }}" alt="{{ site.data.home.features.transition.alt-text }}" />
+	</div>
+
+	<div class="row">
+		<div class="col-lg-12 text-center">
+			{%- for heading in site.data.home.features.two.heading -%}
+			<h2>{{ heading.part }}</h2>
+			{%- endfor -%}
+		</div>
+		{%- for feature in site.data.home.features.two.feature -%}
+		<div class="col-md-6 text-center">
+			<div>
+				<h4>{{ feature.subheading }}</h4>
+			</div>
+			<img src="{{ feature.image }}" alt="{{ feature.alt-text }}"/>
+		</div>
+		{%- endfor -%}
+	      </div>
+	    </div>
+	    
+	    <div class="row">
+	      <div class="col-lg-12 text-center">
+		<h2>{{ site.data.home.features.three.heading }}</h2>
+		<h4>{{ site.data.home.features.three.text }}</h4>
+		<img src="{{ site.data.home.features.three.image }}" alt="{{ site.data.home.features.three.alt-text }}"/>
+	      </div>    
+	    </div>		 
       </div>
     </section>
 
 
     <!-- Social Proof -->
-    <section id="testimonial" class="testimonial">
+    <section id="testimonial">
       <div class="container">
 	<div class="row">
 	  <div class="col-lg-12 text-center">
-		<h2 class="section-heading text-uppercase">{{ site.data.home.testimonial.heading }}</h2>
+		<h2 class="section-heading text-uppercase">{{ site.data.home.testimonial.section-heading }}</h2>
 	  </div>
 	</div>
-	<div class="row testimonial-block">
-	  <div class="col-md-4 square-image text-center"><img src="{{ site.data.home.testimonial.image }}" alt="{{ site.data.home.testimonial.alt-text }}"></div>
-	  <blockquote class="col-md-8">
-	    <p class="">{{ site.data.home.testimonial.text }}</p>
-	    <p class="author">{{ site.data.home.testimonial.credentials }}</p>
-	  </blockquote> 
+	<div class="row">
+	  <div class="col-md-6 text-center">
+		  <img src="{{ site.data.home.testimonial.image }}" alt="{{ site.data.home.testimonial.alt-text }}">
+	  </div>
+	  <div class="col-md-6 text-center">
+		<div style="color: black" class="">   
+				<h1 class="text-gradient text-uppercase">{{ site.data.home.testimonial.heading }}</h1>
+	  	</div>
+		<div>
+		  <h4> class="text-uppercase">{{ site.data.home.testimonial.credentials }}</h4>  
+		</div>
+		<blockquote>
+		    <p class="">{{ site.data.home.testimonial.text }}</p>
+		</blockquote> 
+	  </div>
 	</div>	
       </div>
     </section>
@@ -71,64 +112,16 @@ layout: default
     <section id="about">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">{{ site.data.home.about.heading }}</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <p class="">{{ site.data.home.about.text }}<p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12 about-image text-center">
-            <img class="full-width" src="{{ site.data.home.about.image }}" alt="{{ site.data.home.about.alt-text }}">
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Contact -->
-    <section id="contact">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">{{ site.data.home.contact.heading }}</h2>
-            <h3 class="section-subheading text-muted">{{ site.data.home.contact.subheading }}</h3>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12">
-            <form id="contactForm" name="sentMessage" novalidate="novalidate">
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <input class="form-control" id="name" type="text" placeholder="{{ site.data.home.contact.name }}" required="required" data-validation-required-message="{{ site.data.home.contact.name-required }}">
-                    <p class="help-block text-danger"></p>
-                  </div>
-                  <div class="form-group">
-                    <input class="form-control" id="email" type="email" placeholder="{{ site.data.home.contact.email }}" required="required" data-validation-required-message="{{ site.data.home.contact.email-required }}">
-                    <p class="help-block text-danger"></p>
-                  </div>
-                  <div class="form-group">
-                    <input class="form-control" id="phone" type="tel" placeholder="{{ site.data.home.contact.phone }}" required="required" data-validation-required-message="{{ site.data.home.contact.phone-required }}">
-                    <p class="help-block text-danger"></p>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <textarea class="form-control" id="message" placeholder="{{ site.data.home.contact.message }}" required="required" data-validation-required-message="{{ site.data.home.contact.message-required }}"></textarea>
-                    <p class="help-block text-danger"></p>
-                  </div>
-                </div>
-                <div class="clearfix"></div>
-                <div class="col-lg-12 text-center">
-                  <div id="success"></div>
-                  <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">{{ site.data.home.contact.btn }}</button>
-                </div>
-              </div>
-            </form>
-          </div>
-        </div>
+		<div>
+		  <img src="{{ site.data.home.about.image }}" alt="{{ site.data.home.about.alt-text }}/>
+		</div>
+	</div>
+	<div class="row">
+		{%- for text in site.data.home.about.text -%}
+		<div class="col-md-6">
+		  <p {{ text.p }} />
+		</div>
+	        {%- endfor -%}
+	</div>
       </div>
     </section>
