--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -84,7 +84,7 @@ layout: default
       <div class="container">
 	<div class="row">
 	  <div class="col-lg-12 text-center">
-		<h2 class="text-uppercase">{{ site.data.home.testimonial.section-heading }}</h2>
+		<h2 class="text-uppercase" {{ site.data.home.testimonial.section-heading }}</h2>
 	  </div>
 	</div>
 	<div class="row">
