--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -108,7 +108,7 @@ layout: default
 
     <!-- CTA -->
 
-    <!-- About -->
+    <!-- About 
     <section id="about">
       <div class="container">
         <div class="row">
@@ -126,4 +126,4 @@ layout: default
 	        {%- endfor -%}
 	</div>
       </div>
-    </section>
+    </section> -->
