--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -79,7 +79,7 @@ layout: default
     </section>
 
 
-    <!-- Testimonial -->
+    <!-- Testimonial 
     <section id="testimonial">
       <div class="container">
 	<div class="row">
@@ -104,7 +104,7 @@ layout: default
 	  </div>
 	</div>	
       </div>
-    </section>
+    </section> -->
 
     <!-- CTA -->
 
