--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,7 +33,7 @@ layout: default
     </section>
 
 
-    <!-- Features -->
+    <!-- Features
     <section id="features">
       <div class="container">
         <div class="row">
@@ -76,7 +76,7 @@ layout: default
 	      </div>    
 	    </div>		 
       </div>
-    </section>
+    </section> -->
 
 
     <!-- Testimonial 
