--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@ layout: default
       <div class="container">
         <div class="intro-text">
 	  <div class="intro-lead-in">{{ site.data.home.intro.lead-in }}</div>
-          <div style="background-color: black" class="intro-title ">
+          <div class="intro-title ">
 	    <h1 class="text-gradient">{{ site.data.home.intro.title }}</h1>
 	  </div>
           <div class="intro-heading">{{ site.data.home.intro.heading }}</div>
