--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ layout: default
   {%- assign assets_path = site.assets_path -%}
 {%- endif -%}
     {% assign ws = '' %}
-    <!-- Header -->
+    <!-- Header 
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
@@ -18,7 +18,7 @@ layout: default
           <a class="btn btn-primary btn-xl btn-sm text-uppercase js-scroll-trigger" href="#features">{{ site.data.home.intro.btn }}</a>
         </div>      
       </div>
-    </header>
+    </header>-->
 
 
     <!-- Description -->
