--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@ layout: default
     </header>-->
 
 
-    <!-- Description -->
+    <!-- Description 
     <section id="description">
       <div class="container">
         <div class="row">
@@ -30,7 +30,7 @@ layout: default
 	  </div>
 	</div>
       </div>
-    </section>
+    </section> -->
 
 
     <!-- Features
