--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,124 +6,5 @@ layout: default
   {%- assign assets_path = site.assets_path -%}
 {%- endif -%}
     {% assign ws = '' %}
-    <!-- Header 
-    <header class="masthead">
-      <div class="container">
-        <div class="intro-text">
-	  <div class="intro-lead-in">{{ site.data.home.intro.lead-in }}</div>
-          <div class="intro-title ">
-	    <h1 class="text-gradient">{{ site.data.home.intro.title }}</h1>
-	  </div>
-          <div class="intro-heading">{{ site.data.home.intro.heading }}</div>
-          <a class="btn btn-primary btn-xl btn-sm text-uppercase js-scroll-trigger" href="#features">{{ site.data.home.intro.btn }}</a>
-        </div>      
-      </div>
-    </header>-->
 
-
-    <!-- Description 
-    <section id="description">
-      <div class="container">
-        <div class="row">
-	  <div class="col-lg-12 text-center">
-	    <h4>{{ site.data.home.intro.description }}</h4>
-	  </div>
-	</div>
-      </div>
-    </section> -->
-
-
-    <!-- Features
-    <section id="features">
-      <div class="container">
-        <div class="row">
-		<div class="col-md-6 text-center">
-			<div style="background-color: black" class="">   
-				<h1 class="text-gradient text-uppercase">{{ site.data.home.features.one.heading }}</h1>
-	  		</div>
-			<div>
-				<h4>{{  site.data.home.features.one.subheading  }}</h4>
-			</div>
-		</div>
-		<div class="col-md-6 text-center">
-			<img src="{{ site.data.home.features.one.image }}" alt="{{ site.data.home.features.one.alt-text }}" />
-		</div>
-		<img class="full-width" src="{{ site.data.home.features.transition.image }}" alt="{{ site.data.home.features.transition.alt-text }}" />
-	</div>
-
-	<div class="row">
-		<div class="col-lg-12 text-center">
-			{%- for heading in site.data.home.features.two.heading -%}
-			<h2>{{ heading.part }}</h2>
-			{%- endfor -%}
-		</div>
-		{%- for feature in site.data.home.features.two.feature -%}
-		<div class="col-md-6 text-center">
-			<div>
-				<h4>{{ feature.subheading }}</h4>
-			</div>
-			<img src="{{ feature.image }}" alt="{{ feature.alt-text }}"/>
-		</div>
-		{%- endfor -%}
-	      </div>
-	    </div>
-	    
-	    <div class="row">
-	      <div class="col-lg-12 text-center">
-		<h2>{{ site.data.home.features.three.heading }}</h2>
-		<h4>{{ site.data.home.features.three.text }}</h4>
-		<img src="{{ site.data.home.features.three.image }}" alt="{{ site.data.home.features.three.alt-text }}"/>
-	      </div>    
-	    </div>		 
-      </div>
-    </section> -->
-
-
-    <!-- Testimonial 
-    <section id="testimonial">
-      <div class="container">
-	<div class="row">
-	  <div class="col-lg-12 text-center">
-		<h2 class="text-uppercase" {{ site.data.home.testimonial.section-heading }}</h2>
-	  </div>
-	</div>
-	<div class="row">
-	  <div class="col-md-6 text-center">
-            <img style="width: 100%" src="{{ site.data.home.testimonial.image }}" alt="{{ site.data.home.testimonial.alt-text }}">
-	  </div>
-	  <div class="col-md-6 text-center">
-	    <div style="background-color: black" class="">   
-	      <h1 class="text-gradient text-uppercase">{{ site.data.home.testimonial.heading }}</h1>
-	    </div>
-	    <div>
-	      <h4> class="text-uppercase">{{ site.data.home.testimonial.credentials }}</h4>  
-	    </div>
-	    <blockquote>
-	      <p class="">{{ site.data.home.testimonial.text }}</p>
-	    </blockquote> 
-	  </div>
-	</div>	
-      </div>
-    </section> -->
-
-    <!-- CTA -->
-
-    <!-- About 
-    <section id="about">
-      <div class="container">
-        <div class="row">
-		<div>
-		  <img src="{{ site.data.home.about.image }}" alt="{{ site.data.home.about.alt-text }}/>
-		</div>
-	</div>
-	<div class="row">
-		{%- for text in site.data.home.about.text -%}
-		<div class="col-md-6">
-		  {%- for content in text.p -%}	     
-		  <p {{ content }} />
-	          {%- end for -%}
-		</div>
-	        {%- endfor -%}
-	</div>
-      </div>
-    </section> -->
+<h1>Hello world!</h1>
