--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,5 +8,5 @@ layout: default
     {% assign ws = '' %}
 
 <h1>Hello world!</h1>
-<h1>{{ data.home.intro.title }}</h1>
+<h1>{{ site.data.home.intro.title }}</h1>
 
