--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,16 +7,28 @@ layout: default
 {%- endif -%}
     {% assign ws = '' %}
 
- <!-- Header -->
-    <header class="masthead">
-      <div class="container">
-        <div class="intro-text">
-	  <div class="intro-lead-in">{{ site.data.home.intro.lead-in }}</div>
-          <div class="intro-title ">
-	    <h1 class="text-gradient">{{ site.data.home.intro.title }}</h1>
-	  </div>
-          <div class="intro-heading">{{ site.data.home.intro.heading }}</div>
-          <a class="btn btn-primary btn-xl btn-sm text-uppercase js-scroll-trigger" href="#features">{{ site.data.home.intro.btn }}</a>
-        </div>      
+<!-- Header -->
+<header class="masthead">
+  <div class="container">
+    <div class="intro-text">
+      <div class="intro-lead-in">{{ site.data.home.intro.lead-in }}</div>
+        <div class="intro-title ">
+          <h1 class="text-gradient">{{ site.data.home.intro.title }}</h1>
+        </div>
+      <div class="intro-heading">{{ site.data.home.intro.heading }}</div>
+      <a class="btn btn-primary btn-xl btn-sm text-uppercase js-scroll-trigger" href="#features">{{ site.data.home.intro.btn }}</a>
+    </div>      
+  </div>
+</header>
+
+<!-- Description -->
+<section id="description">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+	<h4>{{ site.data.home.intro.description }}</h4>
       </div>
-    </header>
+    </div>
+  </div>
+</section>
+
