--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -75,3 +75,31 @@ layout: default
     </div>		 
   </div>
 </section> 
+
+
+<!-- Testimonial --> 
+<section id="testimonial">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+	<h2 class="text-uppercase" {{ site.data.home.testimonial.section-heading }}</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 text-center">
+        <img style="width: 100%" src="{{ site.data.home.testimonial.image }}" alt="{{ site.data.home.testimonial.alt-text }}">
+      </div>
+      <div class="col-md-6 text-center">
+        <div style="background-color: black" class="">   
+          <h1 class="text-gradient text-uppercase">{{ site.data.home.testimonial.heading }}</h1>
+        </div>
+        <div>
+          <h4> class="text-uppercase">{{ site.data.home.testimonial.credentials }}</h4>  
+        </div>
+        <blockquote>
+          <p class="">{{ site.data.home.testimonial.text }}</p>
+        </blockquote> 
+      </div>
+    </div>	
+  </div>
+</section>
