--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -94,7 +94,7 @@ layout: default
           <h1 class="text-gradient text-uppercase">{{ site.data.home.testimonial.heading }}</h1>
         </div>
         <div>
-          <h4> class="text-uppercase">{{ site.data.home.testimonial.credentials }}</h4>  
+          <h4 class="text-uppercase">{{ site.data.home.testimonial.credentials }}</h4>  
         </div>
         <blockquote>
           <p class="">{{ site.data.home.testimonial.text }}</p>
