--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -103,3 +103,23 @@ layout: default
     </div>	
   </div>
 </section>
+
+<!-- About -->
+<section id="about">
+  <div class="container">
+    <div class="row">
+      <div>
+	<img src="{{ site.data.home.about.image }}" alt="{{ site.data.home.about.alt-text }}/>
+      </div>
+    </div>
+    <div class="row">
+      {%- for text in site.data.home.about.text -%}
+      <div class="col-md-6">
+        {%- for content in text.p -%}	     
+        <p>{{ content }}</p>
+        {%- end for -%}
+      </div>
+    {%- endfor -%}
+    </div>
+  </div>
+</section>
