--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -109,7 +109,7 @@ layout: default
   <div class="container">
     <div class="row">
       <div style="width: 100%">
-	<img src="{{ site.data.home.about.image }}" alt="{{ site.data.home.about.alt-text }}/>
+	<img src="{{ site.data.home.about.image }}" alt="{{ site.data.home.about.alt-text }}"/>
       </div>
     </div>
     <div class="row">
