--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -108,8 +108,8 @@ layout: default
 <section id="about">
   <div class="container">
     <div class="row">
-      <div style="width: 100%">
-	<img src="{{ site.data.home.about.image }}" alt="{{ site.data.home.about.alt-text }}"/>
+      <div>
+	<img style="width: 100%" src="{{ site.data.home.about.image }}" alt="{{ site.data.home.about.alt-text }}"/>
       </div>
     </div>
     <div class="row">
