--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -2,7 +2,7 @@
 header.masthead {
   text-align: center;
   color: black;
-  background-image: url('../img/mobile-bg.jpg');
+  background-image: url('../img/hero.png');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center top;
