--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,6 +35,7 @@ layout: default
 <!-- Features -->
 <section id="features">
   <div class="container">
+	  
     <div class="row">
       <div class="col-md-6 text-center">
 	<div style="background-color: black" class="">   
@@ -47,13 +48,13 @@ layout: default
       <div class="col-md-6 text-center">
 	<img src="{{ site.data.home.features.one.image }}" alt="{{ site.data.home.features.one.alt-text }}" />
       </div>
-      <img class="full-width" src="{{ site.data.home.features.transition.image }}" alt="{{ site.data.home.features.transition.alt-text }}" />
+      <img style="width: 100%" src="{{ site.data.home.features.transition.image }}" alt="{{ site.data.home.features.transition.alt-text }}" />
     </div>
 
     <div class="row">
       <div class="col-lg-12 text-center">
-	{%- for heading in site.data.home.features.two.heading -%}
-	<h2>{{ heading.part }}</h2>
+	{%- for content in site.data.home.features.two.heading -%}
+	<h2>{{ content }}</h2>
 	{%- endfor -%}
       </div>
       {%- for feature in site.data.home.features.two.feature -%}
@@ -61,16 +62,16 @@ layout: default
         <div>
 	  <h4>{{ feature.subheading }}</h4>
 	</div>
-	<img src="{{ feature.image }}" alt="{{ feature.alt-text }}"/>
+	<img style="width: 100%" src="{{ feature.image }}" alt="{{ feature.alt-text }}"/>
       </div>
       {%- endfor -%}
     </div>
-	    
+
     <div class="row">
       <div class="col-lg-12 text-center">
 	<h2>{{ site.data.home.features.three.heading }}</h2>
 	<h4>{{ site.data.home.features.three.text }}</h4>
-	<img src="{{ site.data.home.features.three.image }}" alt="{{ site.data.home.features.three.alt-text }}"/>
+	<img style="width: 100%" src="{{ site.data.home.features.three.image }}" alt="{{ site.data.home.features.three.alt-text }}"/>
       </div>
     </div>		 
   </div>
