--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -53,11 +53,11 @@ header.masthead {
 }
 @media(min-width:768px) {
   header.masthead {
-    background-image: url('../img/header-bg.jpg');
+    background-image: url('../img/hero.png');
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
-    background-size: auto 100%;
+    background-size: 100% auto;
     @include background-desktop;
     .intro-text {
       padding-top: 150px;
@@ -88,7 +88,7 @@ header.masthead {
 }
 @media(min-width:768px) and (max-width: 992px) {
   header.masthead {
-    background-position: 30% top;
+    //KA background-position: 30% top;
     .intro-text {
       padding-top: 200px;
       padding-bottom: 20px;
