--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -13,27 +13,27 @@ header.masthead {
     padding-top: 350px;
     padding-bottom: 100px;
     .intro-title {
-      font-size: 36px;
-      font-style: italic;
+      font-size: 3vw;
       @include heading-font;
-      margin-bottom: 25px;
+      margin-bottom: 2vw;
     }
     .intro-lead-in {
-      font-size: 22px;
-      font-style: italic;
-      line-height: 22px;
-      margin-bottom: 25px;
-      @include serif-font;
+      font-size: 2.5vw;
+      line-height: 3vw;
+      margin-bottom: 2vw;
+      @include heading-font;
     }
     .intro-heading {
-      font-size: 22px;
+      font-size: 2.5vw;
       font-weight: 500;
-      line-height: 22px;
-      margin-bottom: 25px;
+      line-height: 3vw;
+      margin-bottom: 2vw;
       @include heading-font;
     }
   }
 }
+
+/*
 @media(max-width:425px) {
   header.masthead {
     background-size: auto 90%;
@@ -51,7 +51,10 @@ header.masthead {
     }
   }
 }
-@media(min-width:768px) {
+*/
+
+/* 
+  @media(min-width:768px) {
   header.masthead {
     background-image: url('../img/hero.png');
     background-repeat: no-repeat;
@@ -108,3 +111,4 @@ header.masthead {
     }
   }
 }
+*/
