--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -9,9 +9,9 @@ header.masthead {
   background-size: cover;
   @include background-mobile;
   .intro-text {
-    margin-top: 50px;
-    padding-top: 350px;
-    padding-bottom: 100px;
+    margin-top: 6vw;
+    padding-top: 8vw;
+    padding-bottom: 6vw;
     .intro-title {
       font-size: 3vw;
       @include heading-font;
@@ -24,9 +24,9 @@ header.masthead {
       @include heading-font;
     }
     .intro-heading {
-      font-size: 2.5vw;
+      font-size: 2vw;
       font-weight: 500;
-      line-height: 3vw;
+      line-height: 2.5vw;
       margin-bottom: 2vw;
       @include heading-font;
     }
