--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -31,6 +31,10 @@ a {
   display: inline-block;
 }
 
+.gradient-standout {
+  background-color: black
+}
+
 h1 {
   font-weight: 400;
   @include heading-font;  
@@ -66,21 +70,26 @@ section {
     font-style: italic;
     margin-bottom: 75px;
     text-transform: none;
-    @include serif-font;
   }
 }
+
+
 @media(min-width:768px) {
   section {
-    padding: 150px 0;
+    padding: 3em 0;
   }
 }
 
+
 // Button Styles
-.btn {
+.btn, .btn-xl, .btn-sm {
   @include heading-font;
   font-weight: 600;
+  font-size: 1.75vw;
+  padding: 1vw;
 }
 
+/*
 .btn-xl {
   font-size: 64px;
   padding: 20px 40px;
@@ -90,7 +99,7 @@ section {
   font-size: 64px;
   padding: 16px 32px;
 }
-
+*/
 
 .btn-primary {
   background-color: $primary;
