--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,14 +10,19 @@ layout: default
 <!-- Header -->
 <header class="masthead">
   <div class="container">
-    <div class="intro-text">
-      <div class="intro-lead-in">{{ site.data.home.intro.lead-in }}</div>
-        <div class="intro-title ">
-          <h1 class="text-gradient text-uppercase">{{ site.data.home.intro.title }}</h1>
-        </div>
-      <div class="intro-heading">{{ site.data.home.intro.heading }}</div>
-      <a class="btn btn-primary btn-xl btn-sm text-uppercase js-scroll-trigger" href="#features">{{ site.data.home.intro.btn }}</a>
-    </div>      
+    <div class="row">
+	    <div class="col-7">
+	      <img style="width: 100%" src="{{ site.data.home.intro.image }}" alt="{{ site.data.home.intro.alt-text }}"/>
+	    </div>
+	    <div class="col-5 intro-text">
+	      <div class="intro-lead-in">{{ site.data.home.intro.lead-in }}</div>
+		<div class="intro-title ">
+		  <h1 class="text-gradient text-uppercase">{{ site.data.home.intro.title }}</h1>
+		</div>
+	      <div class="intro-heading">{{ site.data.home.intro.heading }}</div>
+	      <a class="btn btn-primary btn-xl btn-sm text-uppercase js-scroll-trigger" href="#features">{{ site.data.home.intro.btn }}</a>
+	    </div>
+    </div>
   </div>
 </header>
 
