--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ layout: default
 	    </div>
 	    <div class="col-5 intro-text">
 	      <div class="intro-lead-in">{{ site.data.home.intro.lead-in }}</div>
-		<div class="intro-title ">
+		<div class="gradient-standout intro-title ">
 		  <h1 class="text-gradient text-uppercase">{{ site.data.home.intro.title }}</h1>
 		</div>
 	      <div class="intro-heading">{{ site.data.home.intro.heading }}</div>
@@ -45,7 +45,7 @@ layout: default
     <!-- Feature 1 -->	  
     <div class="row">
       <div class="col-md-6 text-center">
-	<div style="background-color: black" class="">   
+	<div class="gradient-standout">   
 	  <h1 class="text-gradient text-uppercase">{{ site.data.home.features.one.heading }}</h1>
 	</div>
 	<div>
@@ -98,7 +98,7 @@ layout: default
         <img style="width: 100%" src="{{ site.data.home.testimonial.image }}" alt="{{ site.data.home.testimonial.alt-text }}">
       </div>
       <div class="col-md-6 text-center">
-        <div style="background-color: black" class="">   
+        <div class="gradient-standout">   
           <h1 class="text-gradient text-uppercase">{{ site.data.home.testimonial.heading }}</h1>
         </div>
         <div>
