--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,10 +11,10 @@ layout: default
 <header class="masthead">
   <div class="container">
     <div class="row">
-	    <div class="col-7">
-	      <img style="width: 100%" src="{{ site.data.home.intro.image }}" alt="{{ site.data.home.intro.alt-text }}"/>
+	    <div class="col-sm-7 mx-auto">
+	      <img class="image" src="{{ site.data.home.intro.image }}" alt="{{ site.data.home.intro.alt-text }}"/>
 	    </div>
-	    <div class="col-5 intro-text">
+	    <div class="col-sm-5 intro-text">
 	      <div class="intro-lead-in">{{ site.data.home.intro.lead-in }}</div>
 		<div class="gradient-standout intro-title ">
 		  <h1 class="text-gradient text-uppercase">{{ site.data.home.intro.title }}</h1>
@@ -23,21 +23,15 @@ layout: default
 	      <a class="btn btn-primary btn-xl btn-sm text-uppercase js-scroll-trigger" href="#features">{{ site.data.home.intro.btn }}</a>
 	    </div>
     </div>
-  </div>
-</header>
-
-<!-- Description -->
-<hr style="border-top: 3px solid #bbb; border-radius: 5px; width: 30%">
-<section id="description">
-  <div class="container">
+    <hr style="border-top: 3px solid #bbb; border-radius: 5px; width: 30%">
     <div class="row">
-      <div class="col-lg-12 text-center">
+      <div class="col-lg-12 text-center intro-header mx-2">
 	<h4>{{ site.data.home.intro.description }}</h4>
       </div>
     </div>
+    <hr style="border-top: 3px solid #bbb; border-radius: 5px; width: 30%">
   </div>
-</section>
-<hr style="border-top: 3px solid #bbb; border-radius: 5px; width: 30%">
+</header>
 
 <!-- Features -->
 <section id="features">
