--- a/assets/css/agency.min.scss
+++ b/assets/css/agency.min.scss
@@ -13,7 +13,7 @@
 // Components
 @import "_navbar.scss";
 @import "_masthead.scss";
-@import "_services.scss";
+@import "_features.scss";
 @import "_testimonial.scss";
 @import "_about.scss";
 @import "_contact.scss";
