--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,7 @@ layout: default
     </div>
     <hr style="border-top: 3px solid #bbb; border-radius: 5px; width: 30%">
     <div class="row">
-      <div class="col-lg-12 text-center intro-header mx-2">
+      <div class="col-lg-12 text-center subheader">
 	<h4>{{ site.data.home.intro.description }}</h4>
       </div>
     </div>
@@ -39,12 +39,15 @@ layout: default
     <!-- Feature 1 -->	  
     <div class="row">
       <div class="col-md-6 text-center">
-	<div class="gradient-standout">   
-	  <h1 class="text-gradient text-uppercase">{{ site.data.home.features.one.heading }}</h1>
+	<div class="gradient-standout feature-heading">   
+	  {%- for content in site.data.home.features.one.heading -%}
+	  <h1 class="text-gradient text-uppercase">{{  content  }}</h1>
+	  {%- endfor -%}
 	</div>
 	<div>
 	  <h4>{{  site.data.home.features.one.subheading  }}</h4>
 	</div>
+	<img style="width: 100%; object-fit: fill; float: bottom; margin-top: 1em;" src="{{ site.data.home.features.one.subimage }}" alt="{{ site.data.home.features.one.sub-alt-text }}" />
       </div>
       <div class="col-md-6 text-center">
 	<img style="width: 100%" src="{{ site.data.home.features.one.image }}" alt="{{ site.data.home.features.one.alt-text }}" />
@@ -53,7 +56,7 @@ layout: default
     </div>
     <!-- Feature 2 -->
     <div class="row">
-      <div class="col-lg-12 text-center">
+      <div class="col-lg-12 text-center feature-heading">
 	{%- for content in site.data.home.features.two.heading -%}
 	<h2>{{ content }}</h2>
 	{%- endfor -%}
@@ -69,7 +72,7 @@ layout: default
     </div>
     <!-- Feature 3 -->
     <div class="row">
-      <div class="col-lg-12 text-center">
+      <div class="col-lg-12 text-center feature-heading">
 	<h2>{{ site.data.home.features.three.heading }}</h2>
 	<h4>{{ site.data.home.features.three.text }}</h4>
 	<img style="width: 100%" src="{{ site.data.home.features.three.image }}" alt="{{ site.data.home.features.three.alt-text }}"/>
